# Krait

./: .gitignore  00_READ_ME_FIRST.md  00_READ_ME_FIRST_NEW.txt  ADDING_LIBRARIES.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  BUILD_SYSTEM.md  CHANGELOG.md  COMPLETE_DOCUMENTATION.md  COMPLETION_SUMMARY.md  Cargo.toml  DOCUMENTATION_COMPLETE.txt  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_FINAL.md  DOCUMENTATION_MANIFEST.md  DOCUMENTATION_v0.2.0.md  EXAMPLES_MODULAR.md  FEATURES_SUPPORTED.md  FILES_REFERENCE.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  IMPORTS_SYSTEM.md  IMPROVEMENTS.md  INDEX.md  KRAIT_COMPLETE_DOCS.md  KRAIT_DOCUMENTATION.md  KRAIT_INTRODUCTION.md  KRAIT_v0_2_0_RELEASE.md  LIBRARY_GUIDE.md  LICENSE  MODULAR_ARCHITECTURE.md  MODULAR_CODEGEN.md  MODULAR_DOCS_INDEX.md  MODULAR_REFACTOR_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_REFERENCE_MODULAR.md  QUICK_START_BUILD.md  (+46 more)
src/: lib.rs  main.rs
src/modules/: mod.rs
src/modules/api/: mod.rs
src/modules/cli/: mod.rs
src/modules/codegen/: gen.rs  lexer.rs  libs.rs  mod.rs  parser.rs
testatt/myapp/: .gitignore  Cargo.toml  README.md
testatt/myapp/krait_src/: main.kr
