[package]
name = "krait_translator"
version = "0.2.0"
edition = "2021"

[lib]
name = "krait_translator"
path = "src/lib.rs"

[[bin]]
name = "krait"
path = "src/main.rs"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
